finished parser mostly